--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name">Page</string>
     <string name="text_message">Введите сообщение</string>
     <string name="button_text_send">Отправить</string>
+    <string name="time" />
+    <string name="name" />
 
 </resources>
